<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/ic_launcher_background"

    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Employee Details"
        android:textColor="@color/colorAccent"
        android:textSize="40sp"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="3"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Employee Id"
            android:textColor="@color/text"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/editroll"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:hint="Enter ID"
            android:inputType="number"
            android:backgroundTint="@color/tint"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name:"
            android:textColor="@color/text"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/editname"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:hint="Enter Name"
            android:backgroundTint="@color/tint"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Department:"
            android:textColor="@color/text"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/editmark"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:hint="Enter Dept"
            android:backgroundTint="@color/tint"
            />


    </GridLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        >

        <TableRow>

            <Button
                android:id="@+id/add"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_column="1"
                android:text="@string/but1"
                android:textColor="@color/tint"
                android:backgroundTint="@color/colorAccent"/>

            <Button
                android:id="@+id/del"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_column="2"
                android:text="@string/but2"
                android:textColor="@color/tint"
                android:backgroundTint="@color/colorAccent"/>

            <Button
                android:id="@+id/mod"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_column="3"
                android:text="@string/but3"
                android:textColor="@color/tint"
                android:backgroundTint="@color/colorAccent"/>
        </TableRow>


        <TableRow>


            <Button
                android:id="@+id/view"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_column="1"
                android:text="@string/but4"
                android:textColor="@color/tint"
                android:backgroundTint="@color/colorAccent"/>

            <Button
                android:id="@+id/viewA"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_column="2"
                android:text="@string/but5"
                android:textColor="@color/tint"
                android:backgroundTint="@color/colorAccent"/>

            <Button
                android:id="@+id/show"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_column="3"
                android:text="@string/but6"
                android:textColor="@color/tint"
                android:backgroundTint="@color/colorAccent"/>
        </TableRow>


    </TableLayout>


    <Button
        android:id="@+id/spin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Spinner"
        android:textSize="20sp"
        android:backgroundTint="@color/text"
        android:textColor="@color/tint"/>

</LinearLayout>